GG - have most of the new campsite by id endpoint done.  checking in progress
